Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.14.2
-
Fix Version/s: 5.15.1
-
Component/s: GUI: Drag and Drop
-
Labels:None
-
Environment:Qt 5.14.2
QtCreator 4.11.2
Windows 10 (x64)
-
Platform/s:
-
Commits:c808bd0b60543127686231ce9ebbb2b6331387b2 (qt/qtbase/dev) f2cf690114d91ac0911722600f765a82c2f99fff (qt/qtbase/5.15)
Description
Sometimes when performing Drag and Drop actions on icons, the Drop Event will not be triggered when mouse button is released, even though the action is valid.
The drag will remain active (i.e. drag cursor) until mouse event is triggered, such as moving the mouse or performing left-click again. While the drag action remains in this state, if the user left-clicks again without moving by a single pixel, it is able to continue the drag action as if the mouse button was never released.
This issue is intermittent and will not happen on most of the Drag and Drop actions.
—
The issue can be reproduced with the "draggableicons" Qt example without any software change. However, as this is issue is not consistent, it might not perceived for many Drag and Drops at first.
Steps to reproduce with the "draggableicons" Qt example:
- Left-click on one of the three icons and drag it around within the same frame
- Completely stop the mouse and make sure it steady
- Attempt to drop the icon by releasing the left mouse button, while making sure the mouse is not moved at the same time, as this would create a mouse event that would force a drop event as described above
NOTE: This may take many attemps before experiencing the issue as this is intermittent, but from investigation, it should take less than 50 tries for it to happen at least once.
—
Using an EventFilter on QApplication, no DropEvent nor MouseReleaseEvent is called on any widget when the issue is experienced with releasing the left mouse button.
—
Issue is experienced on Windows x64, Qt 5.14.2 through QtCreator 4.11.2.
Attachments
Issue Links
- is duplicated by
-
QTBUG-87481 Drag and Drop: Drop does not happens until mouse is moved a bit
-
- Closed
-